[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Project_Name"
description = "Project Description"
authors = [{ name="Arash Salarian", email="arash@salarian.com" }]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/salarian/py_pkg_base"
"Bug Tracker" = "https://github.com/salarian/py_pkg_base/issues"

[project.optional-dependencies]
test = [
  "pytest >=7.0",
]

[tool.hatch.version]
path = "my_package/__about__.py"

[tool.black]
line-length = 100
